# photo

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
include/photo/: photo_camera.hpp  photo_reporter.hpp
src/libphoto2/: photo_camera.cpp  photo_camera_list.cpp  photo_reporter.cpp
src/photo_node/: photo_node.cpp
